--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>GetID</title>
@@ -7,7 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
+  <h2>Routes:</h2>
+  <ul>
+    <li>
+      <a href="/tabs/123/book">/tabs/123/book</a>
+    </li>
+    <li>
+      <a href="/tabs/123/review">/tabs/123/review</a>
+    </li>
+  </ul>
   <app-root></app-root>
 </body>
+
 </html>
